--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                  <p>
                     Monitors activity to identify project roadblocks
                  </p>
-                 <img src="../css/images/icon-supervisor.svg" alt="">
+                 <img src="../images/icon-supervisor.svg" alt="">
             </div>
 
   <div class="box b">
@@ -35,7 +35,7 @@
         <p>
             Scans our talent network to create the optimal team for your project
         </p>
-        <img src="../css/images/icon-team-builder.svg" alt="">
+        <img src="../images/icon-team-builder.svg" alt="">
   </div>          
 
   
@@ -44,7 +44,7 @@
     <p>
         Uses data from past projects to provide better delivery estimates
     </p>
-    <img src="../css/images/icon-calculator.svg" alt="">
+    <img src="../images/icon-calculator.svg" alt="">
   </div>
 
   <div class="box c">
@@ -52,7 +52,7 @@
     <p>
         Regularly evaluates our talent to ensure quality
     </p>
-    <img src="../css/images/icon-karma.svg" alt="">
+    <img src="../images/icon-karma.svg" alt="">
 </div>
 
   </div>
